.infrastructure - Alterações para a criação de recursos via terraform para o projeto. - pipeline - vpc - ecs fargate etc
bin/terraform - comandos simplificados
.gitignore - inclusão de arquivos que não devem ser versionados

buildspec.yml - ajustes para o build no pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ venv
 *.pyc
 */**/__pycache__/*
 /.env
+
+/.infrestructure/dist/deployment.zip
+/.infrestructure/.terraform/
+/.infrastructure/.terraform.lock.hcl
+/.infrastructure/terraform.tfstate
+/.infrastructure/terraform.tfstate.backup
+/.infrastructure/plan.json
+/plan.json
+/plan.json.binary
+/docker/elk/logs/elasticsearch.log
+/.infrastructure/.terraform/
