--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,8 @@ phases:
       - pip install -r ./requirements-vendor.txt
   build:
     commands:
+      - echo Migrations
+      - ./bin/manage/makemigrate_and_migrate.sh
       - echo Bulding docker image
       - ./bin/aws/ecr-docker-build.sh
       - echo Generating docker tag
