--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -57,7 +57,8 @@
         "APP_ENV": "development",
         "DEBUG": "true",
         "LOG_LEVEL": "info",
-        "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1OHDYTJP208R1"
+        "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1OHDYTJP208R1",
+        "AWS_PROFILE": "tcc-td-puc-minas-admin"
       }
     }
   }
