pequenos ajustes de profile

--- a/docker/aws/credentials.example
+++ b/docker/aws/credentials.example
@@ -1,4 +1,4 @@
-[tcc-td-puc-minas-admin]
+[sigo-lambdas]
 aws_access_key_id=************
 aws_secret_access_key=***********************************
 region=sa-east-1
