--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -58,7 +58,7 @@
         "DEBUG": "true",
         "LOG_LEVEL": "info",
         "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1OHDYTJP208R1",
-        "AWS_PROFILE": "tcc-td-puc-minas-admin"
+        "AWS_PROFILE": "sigo-lambdas"
       }
     }
   }
