--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,21 +14,21 @@ phases:
       - pip install -r ./requirements-vendor.txt
   post_build:
     commands:
-#      - echo Installing test requirements
-#      - pip install -r ./requirements-tests.txt
-#      - echo Running unit testes
-#      - ./bin/tests/unit-coverage-no-report-html.sh
+      - echo Installing test requirements
+      - pip install -r ./requirements-tests.txt
+      - echo Running unit testes
+      - ./bin/tests/unit-coverage-no-report-html.sh
     finally:
        - echo Replacing account variable of .chalice/config.json
        - sed -i "s/\${AWS::AccountId}/${ACCOUNT_ID}/g" .chalice/config.json
        - echo Generating package file
        - ./bin/chalice/package.sh  --stage production
        - aws cloudformation package --template-file sam.json --s3-bucket $S3_BUCKET --s3-prefix $PROJECT_NAME --output-template-file packaged.yml
-#reports:
-#  UnitTestsReports:
-#    files:
-#      - 'target/unit/clover.xml'
-#    file-format: 'CLOVERXML'
+reports:
+  UnitTestsReports:
+    files:
+      - 'target/unit/clover.xml'
+    file-format: 'CLOVERXML'
 artifacts:
   files:
     - sam.json
