--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -25,7 +25,7 @@
         "API_SERVER_DESCRIPTION": "Production server",
         "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1V8SWT9Q96YWJ",
         "AWS_ACCOUNT_ID": "${AWS::AccountId}",
-        "AWS_REGION": "sa-east-1"
+        "AWS_REGION_ID": "sa-east-1"
       },
       "tags": {
         "Env": "production"
@@ -47,7 +47,7 @@
         "API_SERVER_DESCRIPTION": "Development server",
         "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1V8SWT9Q96YWJ",
         "AWS_ACCOUNT_ID": "${AWS::AccountId}",
-        "AWS_REGION": "sa-east-1"
+        "AWS_REGION_ID": "sa-east-1"
       },
       "tags": {
         "Env": "staging"
@@ -70,7 +70,7 @@
         "DYNAMODB_TABLE_NAME": "standard-manager-dynamodb-StandardTable-1V8SWT9Q96YWJ",
         "AWS_PROFILE": "sigo-lambdas",
         "AWS_ACCOUNT_ID": "${AWS::AccountId}",
-        "AWS_REGION": "sa-east-1"
+        "AWS_REGION_ID": "sa-east-1"
       }
     }
   }
